--- a/sleeptracker/src/app/home/home.page.html
+++ b/sleeptracker/src/app/home/home.page.html
@@ -6,15 +6,15 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Sleep Tracker</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content fullscreen>
+  <ion-card (click)="toSleepPage()" style="height: 75px; width: 90%;">
+  <ion-card-header>
+    <ion-card-subtitle>Sleep</ion-card-subtitle>
+  </ion-card-header>
+</ion-card>
+<ion-card style="height: 110px; width: 90%;">
+  <ion-card-header>
+    <ion-card-subtitle>Sleep</ion-card-subtitle>
+  </ion-card-header>
+</ion-card>
 </ion-content>
