--- a/sleeptracker/src/app/home/home.page.html
+++ b/sleeptracker/src/app/home/home.page.html
@@ -7,14 +7,32 @@
 </ion-header>
 
 <ion-content fullscreen>
-  <ion-card (click)="toSleepPage()" style="height: 75px; width: 90%;">
-  <ion-card-header>
-    <ion-card-subtitle>Sleep</ion-card-subtitle>
-  </ion-card-header>
-</ion-card>
-<ion-card style="height: 110px; width: 90%;">
-  <ion-card-header>
-    <ion-card-subtitle>Sleep</ion-card-subtitle>
-  </ion-card-header>
-</ion-card>
+  <ion-card (click)="toSleepPage()">
+    <ion-card-header>
+      <ion-card-subtitle>Destination</ion-card-subtitle>
+      <ion-card-title>Sleep</ion-card-title>
+    </ion-card-header>
+  </ion-card>
+
+  <ion-card (click)="toSleepPage()">
+    <ion-card-header>
+      <ion-card-subtitle>Destination</ion-card-subtitle>
+      <ion-card-title>Sleep</ion-card-title>
+    </ion-card-header>
+  </ion-card>
+
+  <ion-card (click)="toSleepPage()">
+    <ion-card-header>
+      <ion-card-subtitle>Destination</ion-card-subtitle>
+      <ion-card-title>Sleep</ion-card-title>
+    </ion-card-header>
+  </ion-card>
+  
+  <ion-card (click)="toSleepPage()">
+    <ion-card-header>
+      <ion-card-subtitle>Destination</ion-card-subtitle>
+      <ion-card-title>Sleep</ion-card-title>
+    </ion-card-header>
+  </ion-card>
 </ion-content>
+
