--- a/sleeptracker/src/app/home/home.page.scss
+++ b/sleeptracker/src/app/home/home.page.scss
@@ -26,3 +26,6 @@
   text-decoration: none;
 }
 
+ion-content{
+    --ion-background-color: linear-gradient(0deg, rgba(69,85,140,1) 0%, rgba(29,36,57,1) 100%);
+}
