--- a/sleeptracker/src/app/sleepiness/sleepiness.page.html
+++ b/sleeptracker/src/app/sleepiness/sleepiness.page.html
@@ -1,6 +1,11 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>sleepiness</ion-title>
+    <ion-title>
+      Log Sleepiness
+    </ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
