--- a/sleeptracker/src/app/home/home.page.scss
+++ b/sleeptracker/src/app/home/home.page.scss
@@ -1,6 +1,5 @@
 #container {
   text-align: center;
-
   position: absolute;
   left: 0;
   right: 0;
@@ -16,9 +15,7 @@
 #container p {
   font-size: 16px;
   line-height: 22px;
-
   color: #8c8c8c;
-
   margin: 0;
 }
 
@@ -28,4 +25,18 @@
 
 ion-content{
     --ion-background-color: linear-gradient(0deg, rgba(69,85,140,1) 0%, rgba(29,36,57,1) 100%);
+}
+
+.option-row {
+  margin:10px;
+}
+
+.option-container {
+  background: white;
+  color: black;
+  padding: 25px;
+  border-radius: 10px;
+  margin: 10px;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+  //background-image: linear-gradient( 200deg,  #800e5d 11.1%, #035b8a 81.3% );
 }
