--- a/sleeptracker/src/app/sleepiness/sleepiness.page.html
+++ b/sleeptracker/src/app/sleepiness/sleepiness.page.html
@@ -9,6 +9,20 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
+<ion-content fullscreen="true">
+  <ion-list-header>
+      <ion-label>
+        How are you feeling?
+      </ion-label>
+    </ion-list-header>
+
+    <ion-item>
+      <ion-range [(ngModel)]="level" (ionChange)="updateValue()" pin="true" min="1" max="7" step="1" snaps="true" color="secondary"></ion-range>
+    </ion-item>
+
+    <div style="text-align: center">
+    <ion-button (click)="recordValue()" fill="outline">Record Sleepiness</ion-button>
+    </div>
+
 
 </ion-content>
