--- a/sleeptracker/src/app/sleep/sleep.page.html
+++ b/sleeptracker/src/app/sleep/sleep.page.html
@@ -15,14 +15,14 @@
     <ion-row class="option-container option-left" size="5"> 
       <h1>Sleep Time </h1><br/>
       <ion-item>
-        <ion-datetime display-format="M D, YY HH:mm" placeholder="select wake time" [(ngModel)]="sleepTime">
+        <ion-datetime display-format="YYYY-MM-DD hh:mm" placeholder="select wake time" [(ngModel)]="sleepTime">
         </ion-datetime>
        </ion-item>
     </ion-row>
     <ion-row class="option-container option-right" size="5"> 
       <h1>Wake Time </h1><br/>
       <ion-item>
-        <ion-datetime display-format="M D, YY HH:mm" placeholder="select sleep time" [(ngModel)]="wakeTime">
+        <ion-datetime display-format="YYYY-MM-DD hh:mm" placeholder="select sleep time" [(ngModel)]="wakeTime">
         </ion-datetime>
        </ion-item>
     </ion-row>
