--- a/sleeptracker/src/app/home/home.page.html
+++ b/sleeptracker/src/app/home/home.page.html
@@ -1,95 +1,67 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Home
+      Sleep Tracker
     </ion-title>
   </ion-toolbar>
+
 </ion-header>
 
-<!--
-<ion-content fullscreen>
+<ion-content>
 
-  <ion-text style="text-align: center;">
-    <h4>Current time is:</h4>
-  </ion-text>
+  <div class="options-container">
+    <h2 style="color: black;"> Log an entry </h2>
+    <ion-row>
+      <ion-col style="color: black;" (click)="toSleepPage()" class="option-container ion-col-left" size="6"> 
+        <img class="options-img" src="../assets/sleepy.png">
+        <span style="font-size:14px; margin-left: 7.5px;"> Overnight Sleep </span>
+      </ion-col>
+      <ion-col style="color: black;" (click)="toSleepinessPage()" class="option-container ion-col-right" size="6"> 
+        <img class="options-img" src="../assets/zzz.png">
+       <span style="font-size:14px; margin-left: 7.5px;"> Sleepiness </span>
+      </ion-col>
+    </ion-row> 
+  </div>
 
-  <ion-text style="text-align: center;">
-    <h1>{{ currentTime }}</h1>
-  </ion-text>
+  <h2> Recent History </h2>
 
-  <ion-card (click)="toSleepPage()">
-    <ion-card-header>
-      <ion-card-title>Log Sleep</ion-card-title>
-    </ion-card-header>
-  </ion-card>
+  <div class="slides ion-margin-bottom">
+    <ion-slides [options]="options">
+      <ion-slide>
 
-  <ion-card (click)="toSleepinessPage()">
-    <ion-card-header>
-      <ion-card-title>Log Sleepiness</ion-card-title>
-    </ion-card-header>
-  </ion-card>
-
-  <ion-card (click)="toHistoryPage()">
-    <ion-card-header>
-      <ion-card-title>View History</ion-card-title>
-    </ion-card-header>
-  </ion-card>
-</ion-content>
--->
-
-<ion-content fullscreen="true">
-  <ion-text>
-    <h4 style="margin-left: 20px">Welcome!</h4>
-  </ion-text>
-
-  <ion-row class="option-row">
-    <ion-col (click)="toSleepPage()" class="option-container option-left" size="5"> Sleep </ion-col>
-    <ion-col (click)="toSleepinessPage()" class="option-container option-right" size="5"> Sleepiness</ion-col>
-  </ion-row>
-
-  <ion-text>
-    <h4 style="margin-left: 20px">Recent History</h4>
-  </ion-text>
-
-  <!-- Display 10 most recent logs -->
-  <ion-slides [options]="option">
-    
-    
-    <ion-slide>
-      <ion-card>
-        <img src="https://github.com/thedevclass/ionic-components-library/blob/custom-simple-ionic-slides/src/assets/images/01.jpg?raw=true">
-      </ion-card>
-    </ion-slide>
-    
-    <ion-slide>
-      <ion-card>
-        <img src="https://github.com/thedevclass/ionic-components-library/blob/custom-simple-ionic-slides/src/assets/images/01.jpg?raw=true">
-      </ion-card>
-    </ion-slide>
-
-    <ion-slide>
-      <ion-card>
-        <img src="https://github.com/thedevclass/ionic-components-library/blob/custom-simple-ionic-slides/src/assets/images/01.jpg?raw=true">
-      </ion-card>
-    </ion-slide>
-
-    <ion-slide>
-      <ion-card>
-        <img src="https://github.com/thedevclass/ionic-components-library/blob/custom-simple-ionic-slides/src/assets/images/01.jpg?raw=true">
-      </ion-card>
-    </ion-slide>
-
-    <ion-slide>
-      <ion-card>
-        <img src="https://github.com/thedevclass/ionic-components-library/blob/custom-simple-ionic-slides/src/assets/images/01.jpg?raw=true">
-      </ion-card>
-    </ion-slide>
-  </ion-slides>
-
-  <ion-text>
-    <p (click)="toHistoryPage()" style="margin-left: 20px; text-decoration: underline;">View All</p>
-  </ion-text>
-
-
+        <!-- Sleep -->
+        <ion-card> 
+          <ion-card-header class="ion-text-center"> SLEEP</ion-card-header>
+          <ion-card-content class="ion-text-left">
+            <ion-icon name="calendar-outline"></ion-icon>
+            <ion-text> 02/03/21 </ion-text>
+            <br>
+            <ion-icon name="time-outline"></ion-icon>
+            <ion-text> 11:03 to 08:00 </ion-text>
+            <br>
+            <ion-icon name="hourglass-outline"></ion-icon>
+            <ion-text> 12 hrs 5 min </ion-text>
+          </ion-card-content>
+        </ion-card>
+      </ion-slide>
+      <ion-slide>
+        <!-- Sleepiness -->
+        <ion-card> 
+          <ion-card-header class="ion-text-center"> SLEEPINESS</ion-card-header>
+          <ion-card-content class="ion-text-left">
+            <ion-icon name="calendar-outline"></ion-icon>
+            <ion-text> 02/03/21 </ion-text>
+            <br>
+            <ion-icon name="time-outline"></ion-icon>
+            <ion-text> 11:03</ion-text>
+            <br>
+            <ion-icon name="chevron-forward-outline"></ion-icon>
+            <ion-text> Level 1</ion-text>
+          </ion-card-content>
+        </ion-card>
+      </ion-slide>
+    </ion-slides>
+  </div>
+  <ion-text (click)="toHistoryPage()" style="text-decoration: underline;"> View all </ion-text>
 </ion-content>
 
