--- a/sleeptracker/src/app/home/home.page.scss
+++ b/sleeptracker/src/app/home/home.page.scss
@@ -24,42 +24,51 @@
 }
 
 ion-content{
-    --ion-background-color: linear-gradient(0deg, rgba(69,85,140,1) 0%, rgba(29,36,57,1) 100%);
-}
+  --ion-background-color: rgb(2,9,37);
 
-.option-row {
-  margin:10px;
-}
+    /*
+    --ion-background-color: rgb(14,33,72);
+    --ion-background-color: linear-gradient(325deg, rgba(14,33,72,1) 0%, rgba(6,20,55,1) 100%); */
+    ion-card {
+      width: 100%;
+      box-shadow: none;
+      border-radius: 14px;
+      padding: 5px 15px;
+      color: white;
+      background: linear-gradient(90deg, rgba(86,144,218,1) 0%, rgba(65,129,190,1) 100%);;
 
-.option-container {
-  background: white;
-  color: black;
-  padding: 25px;
-  border-radius: 10px;
-  margin: 10px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
-  //background-image: linear-gradient( 200deg,  #800e5d 11.1%, #035b8a 81.3% );
-}
-
-
-ion-title {
-    font-weight: 600;
-}
-
-ion-card {
-    width: 100%;
-    height: 160px;
-    box-shadow: none;
-    border-radius: 12px;
-    
-    img {
-        object-fit: cover;
-        width: 100%;
-        transform: scale(1.1, 1.1) rotate(1deg);
-        transition: 600ms all ease-in-out;
     }
 }
 
-.custom-slides {
-  margin-top: -5px;
+.option-row {
+  background: black;
+  padding: 25px;
+  margin: 10px 10px;
+  border-radius: 14px;
+}
+
+
+.options-container {
+  background: rgba(255,255,255,1);
+  padding: 40px 20px;
+  border-radius: 0px 0px 0px 45px;
+  p {
+    size: 1em;
+  }
+  margin-top: -40px;
+}
+
+
+.options-img {
+  border-radius: 14px;
+  size: 50%;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.1);
+}
+
+.ion-col-left{
+     margin-left: -5px;
+}
+
+.ion-col-right{
+     margin-left: 5px;
 }
