--- a/sleeptracker/src/app/sleepiness/sleepiness.page.html
+++ b/sleeptracker/src/app/sleepiness/sleepiness.page.html
@@ -17,7 +17,7 @@
     </ion-list-header>
 
     <ion-item>
-      <ion-range [(ngModel)]="level" (ionChange)="updateValue()" pin="true" min="1" max="7" step="1" snaps="true" color="secondary"></ion-range>
+      <ion-range [(ngModel)]="level" pin="true" min="1" max="7" step="1" snaps="true" color="secondary"></ion-range>
     </ion-item>
 
     <div style="text-align: center">
