Change view all button

--- a/sleeptracker/src/app/home/home.page.html
+++ b/sleeptracker/src/app/home/home.page.html
@@ -62,6 +62,7 @@
       </ion-slide>
     </ion-slides>
   </div>
-  <ion-text (click)="toHistoryPage()" style="text-decoration: underline;"> View all </ion-text>
+
+  <ion-button (click)="toHistoryPage()" class= "button" color="light"> View all</ion-button>
 </ion-content>
 
