--- a/sleeptracker/src/app/sleep/sleep.page.html
+++ b/sleeptracker/src/app/sleep/sleep.page.html
@@ -15,21 +15,21 @@
     <ion-row class="option-container option-left" size="5"> 
       <h1>Sleep Time </h1><br/>
       <ion-item>
-        <ion-datetime display-format="YYYY-MM-DD hh:mm" placeholder="select wake time" [(ngModel)]="sleepTime">
+        <ion-datetime display-format="MMM DD, YY HH:mm" placeholder="select wake time" [(ngModel)]="sleepTime">
         </ion-datetime>
        </ion-item>
     </ion-row>
     <ion-row class="option-container option-right" size="5"> 
       <h1>Wake Time </h1><br/>
       <ion-item>
-        <ion-datetime display-format="YYYY-MM-DD hh:mm" placeholder="select sleep time" [(ngModel)]="wakeTime">
+        <ion-datetime display-format="MMM DD, YY HH:mm" placeholder="select sleep time" [(ngModel)]="wakeTime">
         </ion-datetime>
        </ion-item>
     </ion-row>
   </ion-col>
 <ng-container>
   <ion-list style="text-align:center">
-    <ion-button class= "button" color="light"> LOG DATA</ion-button>
+    <ion-button (click)="logdata()" class= "button" color="light"> LOG DATA</ion-button>
   
   </ion-list>
   </ng-container>
