--- a/sleeptracker/src/app/history/history.page.html
+++ b/sleeptracker/src/app/history/history.page.html
@@ -14,18 +14,21 @@
   <h2> Overnight Sleep History </h2>
   <div class="slides ion-margin-bottom">
     <ion-slides [options]="options">
-      <ion-slide *ngFor="let data of sleepHistory">
+      <ion-slide *ngFor="let data of sleepArray">
         <!-- Sleep -->
         <ion-card> 
             <ion-card-content class="ion-text-left">
             <ion-icon name="calendar-outline"></ion-icon>
-            <ion-text> Date: </ion-text>
+            <ion-text> Date: {{data.dateString()}}</ion-text>
             <br>
             <ion-icon name="time-outline"></ion-icon>
-            <ion-text> Time: </ion-text>
+            <ion-text> Start Time:  {{data.startTime()}}</ion-text>
             <br>
             <ion-icon name="time-outline"></ion-icon>
-            <ion-text> Total hours: </ion-text>
+            <ion-text> End Time: {{data.endTime()}} </ion-text>
+            <br>
+            <ion-icon name="time-outline"></ion-icon>
+            <ion-text> Total hours: {{data.summaryString()}} </ion-text>
           </ion-card-content>
         </ion-card>
         <!-- Sleepiness -->
