--- a/sleeptracker/src/app/sleepiness/sleepiness.page.html
+++ b/sleeptracker/src/app/sleepiness/sleepiness.page.html
@@ -10,15 +10,66 @@
 </ion-header>
 
 <ion-content fullscreen="true">
-  <ion-list-header>
-      <ion-label>
-        How are you feeling?
-      </ion-label>
-    </ion-list-header>
+    <ion-row class="option-container option-left" > 
+      <ion-col size="2"> 
+        <img class="level-icons" src="../assets/emoji.png">
+      </ion-col>
+      <ion-col size="10"> 
+        <span class="level-text"> 1. Feeling active, vital, alert, or wide awake</span>
+      </ion-col>
+    </ion-row>
 
-    <ion-item>
-      <ion-range [(ngModel)]="level" pin="true" min="1" max="7" step="1" snaps="true" color="secondary"></ion-range>
-    </ion-item>
+    <ion-row class="option-container option-left" > 
+      <ion-col size="2"> 
+        <img class="level-icons" src="../assets/emoji.png">
+      </ion-col>
+      <ion-col size="10"> 
+        <span class="level-text"> 2. Functioning at high levels, but not at peak; able to concentrate</span>
+      </ion-col>
+    </ion-row>
+    <ion-row class="option-container option-left" > 
+      <ion-col size="2"> 
+        <img class="level-icons" src="../assets/emoji.png">
+      </ion-col>
+      <ion-col size="10"> 
+        <span class="level-text"> 3. Awake, but relaxed; responsive but not fully alert</span>
+      </ion-col>
+    </ion-row>
+    <ion-row class="option-container option-left" > 
+      <ion-col size="2"> 
+        <img class="level-icons" src="../assets/emoji.png">
+      </ion-col>
+      <ion-col size="10"> 
+        <span class="level-text"> 4. Somewhat foggy, let down</span>
+      </ion-col>
+    </ion-row>
+    <ion-row class="option-container option-left" > 
+      <ion-col size="2"> 
+        <img class="level-icons" src="../assets/emoji.png">
+      </ion-col>
+      <ion-col size="10"> 
+        <span class="level-text"> 5. Foggy; losing interest in remaining awake; slowed down</span>
+      </ion-col>
+    </ion-row>
+    <ion-row class="option-container option-left" > 
+      <ion-col size="2"> 
+        <img class="level-icons" src="../assets/emoji.png">
+      </ion-col>
+      <ion-col size="10"> 
+        <span class="level-text"> 6. Sleepy, woozy, fighting sleep; prefer to lie down</span>
+      </ion-col>
+    </ion-row>
+
+    <ion-row class="option-container option-left" > 
+      <ion-col size="2"> 
+        <img class="level-icons" src="../assets/emoji.png">
+      </ion-col>
+      <ion-col size="10"> 
+        <span class="level-text"> 7. No longer fighting sleep, sleep onset soon; having dream-like thoughts</span>
+      </ion-col>
+    </ion-row>
+
+    <ion-range class="option-range" [(ngModel)]="level" pin="true" min="1" max="7" step="1" snaps="true" color="secondary"></ion-range>
 
     <div style="text-align: center">
     <ion-button (click)="recordValue()" fill="outline">Record Sleepiness</ion-button>
