--- a/sleeptracker/src/app/history/history.page.scss
+++ b/sleeptracker/src/app/history/history.page.scss
@@ -8,11 +8,9 @@ ion-content{
       width: 100%;
       box-shadow: none;
       border-radius: 14px;
-      padding: 5px;
+      padding: 5px 15px;
       color: white;
       background: linear-gradient(90deg, rgba(86,144,218,1) 0%, rgba(65,129,190,1) 100%);;
-        ion-text {
-          font-size: 16px;
-        }
+
     }
 }
