Update sleepiness log card sizing

--- a/sleeptracker/src/app/sleepiness/sleepiness.page.html
+++ b/sleeptracker/src/app/sleepiness/sleepiness.page.html
@@ -15,7 +15,7 @@
         <img class="level-icons" src="../assets/emoji.png">
       </ion-col>
       <ion-col size="10"> 
-        <span class="level-text"> 1. Feeling active, vital, alert, or wide awake</span>
+        <span class="level-text">Feeling active, vital, alert, or wide awake</span>
       </ion-col>
     </ion-row>
 
@@ -24,7 +24,7 @@
         <img class="level-icons" src="../assets/emoji.png">
       </ion-col>
       <ion-col size="10"> 
-        <span class="level-text"> 2. Functioning at high levels, but not at peak; able to concentrate</span>
+        <span class="level-text">Functioning at high levels, but not at peak; able to concentrate</span>
       </ion-col>
     </ion-row>
     <ion-row class="option-container option-left" > 
@@ -32,7 +32,7 @@
         <img class="level-icons" src="../assets/emoji.png">
       </ion-col>
       <ion-col size="10"> 
-        <span class="level-text"> 3. Awake, but relaxed; responsive but not fully alert</span>
+        <span class="level-text">Awake, but relaxed; responsive but not fully alert</span>
       </ion-col>
     </ion-row>
     <ion-row class="option-container option-left" > 
@@ -40,7 +40,7 @@
         <img class="level-icons" src="../assets/emoji.png">
       </ion-col>
       <ion-col size="10"> 
-        <span class="level-text"> 4. Somewhat foggy, let down</span>
+        <span class="level-text">Somewhat foggy, let down</span>
       </ion-col>
     </ion-row>
     <ion-row class="option-container option-left" > 
@@ -48,7 +48,7 @@
         <img class="level-icons" src="../assets/emoji.png">
       </ion-col>
       <ion-col size="10"> 
-        <span class="level-text"> 5. Foggy; losing interest in remaining awake; slowed down</span>
+        <span class="level-text">Foggy; losing interest in remaining awake; slowed down</span>
       </ion-col>
     </ion-row>
     <ion-row class="option-container option-left" > 
@@ -56,7 +56,7 @@
         <img class="level-icons" src="../assets/emoji.png">
       </ion-col>
       <ion-col size="10"> 
-        <span class="level-text"> 6. Sleepy, woozy, fighting sleep; prefer to lie down</span>
+        <span class="level-text">Sleepy, woozy, fighting sleep; prefer to lie down</span>
       </ion-col>
     </ion-row>
 
@@ -65,7 +65,7 @@
         <img class="level-icons" src="../assets/emoji.png">
       </ion-col>
       <ion-col size="10"> 
-        <span class="level-text"> 7. No longer fighting sleep, sleep onset soon; having dream-like thoughts</span>
+        <span class="level-text">No longer fighting sleep, sleep onset soon; having dream-like thoughts</span>
       </ion-col>
     </ion-row>
 
