--- a/sleeptracker/src/app/home/home.page.html
+++ b/sleeptracker/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar class="toolbar-styling">
     <ion-title>
       Sleep Tracker
     </ion-title>
@@ -7,6 +7,26 @@
 
 </ion-header>
 
+<ion-content> 
+  <img style="z-index:1; " src="../assets/mountains.png">
+
+  <div class="option-section">
+    <ion-row class="option-container" (click)="toSleepPage()" size="5"> 
+        <h5>Log Overnight Sleep</h5>
+    </ion-row>
+
+    <ion-row class="option-container" (click)="toSleepinessPage()" size="5"> 
+        <h5>Log Sleepiness</h5>
+    </ion-row>
+
+    <ion-row class="option-container" (click)="toHistoryPage()"size="5"> 
+        <h5>View History</h5>
+    </ion-row>
+  </div>
+
+</ion-content>
+
+<!--
 <ion-content>
 
   <div class="options-container">
@@ -23,44 +43,6 @@
     </ion-row> 
   </div>
 
-  <!-- Summary of 10 most recent logged records -->
-  <h2> Recent History </h2>
-  <div class="slides ion-margin-bottom">
-    <ion-slides [options]="options">
-      <ion-slide *ngFor="let data of mostRecentHistory">
-        <ion-card *ngIf="data[0] == 'Sleep Log' "> 
-          <ion-card-content class="ion-text-left">
-            <ion-text> <b> {{ data[0] }} </b> </ion-text>
-            <br>
-            <ion-icon name="calendar-outline"></ion-icon>
-              <ion-text> {{ data[1].dateString() }} </ion-text>
-            <br>
-            <ion-icon name="time-outline"></ion-icon>
-            <ion-text> {{data[1].startTime()}} to {{data[1].endTime()}} </ion-text>
-            <br>
-            <ion-icon name="hourglass-outline"></ion-icon>
-            <ion-text> {{data[1].summaryString()}} </ion-text>
-          </ion-card-content>
-        </ion-card>
-
-        <ion-card *ngIf="data[0] == 'Sleepiness Log' "> 
-          <ion-card-content class="ion-text-left">
-            <ion-text> <b> {{ data[0] }} </b> </ion-text>
-            <br>
-            <ion-icon name="calendar-outline"></ion-icon>
-            <ion-text> {{ data[1].dateString() }} </ion-text>
-            <br>
-            <ion-icon name="time-outline"></ion-icon>
-            <ion-text> {{ data[1].recordedTime() }} </ion-text>
-            <br>
-            <ion-icon name="moon-outline"></ion-icon>
-            <ion-text> Level: {{ data[1].sleepinessLevel() }} </ion-text>
-          </ion-card-content>
-        </ion-card>
-      </ion-slide>
-    </ion-slides>
-  </div>
-
   <ion-button (click)="toHistoryPage()" class= "button" color="light"> View all</ion-button>
 </ion-content>
-
+-->
