--- a/sleeptracker/src/app/home/home.page.html
+++ b/sleeptracker/src/app/home/home.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar class="toolbar-styling">
+  <ion-toolbar style="--background: rgb(9, 18, 33)">
     <ion-title>
       Sleep Tracker
     </ion-title>
@@ -8,7 +8,7 @@
 </ion-header>
 
 <ion-content> 
-  <img style="z-index:1; " src="../assets/mountains.png">
+  <img src="../assets/mountains.png">
 
   <div class="option-section">
     <ion-row class="option-container" (click)="toSleepPage()" size="5"> 
