--- a/sleeptracker/src/app/home/home.page.scss
+++ b/sleeptracker/src/app/home/home.page.scss
@@ -30,7 +30,7 @@
     border-radius: 10px;
     margin: 20px;
     size: 13px;
-    box-shadow: 0 2px 3px rgba(255, 255, 255, 0.15);
+    box-shadow: 1px 1px 1px 0px #ffffff;
   }
 
 .option-section {
