--- a/sleeptracker/src/app/sleep/sleep.page.html
+++ b/sleeptracker/src/app/sleep/sleep.page.html
@@ -10,6 +10,10 @@
 </ion-header>
 <ion-content>
 
+<ion-row class="option-container option-left" size="5"> 
+      <h3>Record Your Overnight Sleep</h3>
+        <h2> Input your sleep and wake time to log your overnight sleep. </h2>
+    </ion-row>
 
    <ion-col class="option-col">
     <ion-row class="option-container option-left" size="5"> 
