--- a/sleeptracker/src/app/history/history.page.html
+++ b/sleeptracker/src/app/history/history.page.html
@@ -14,6 +14,17 @@
   <h2> Overnight Sleep History </h2>
   <h4> More insight: </h4>
   <p> Average Time: {{ averageHours }} </p>
+  <!--
+  <ion-content>
+  <ion-list-header color="light">Vertical Bar Chart</ion-list-header>
+  <ion-card class="welcome-card">
+    <ion-card-header>
+      <ion-card-title>Sleep Duration</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <canvas #sleepChart></canvas>
+    </ion-card-content>
+  </ion-card>-->
   <div class="slides ion-margin-bottom">
     <ion-slides [options]="options">
       <ion-slide *ngFor="let data of sleepArray">
@@ -37,6 +48,7 @@
 
   <h2> Sleepiness History </h2>
   <h2> Average Sleepiness Level: {{ averageLevel }} </h2>
+  <!--
   <ion-content>
   <ion-list-header color="light">Vertical Bar Chart</ion-list-header>
   <ion-card class="welcome-card">
@@ -47,7 +59,8 @@
       <canvas #barChart></canvas>
     </ion-card-content>
   </ion-card>
-</ion-content>
+</ion-content>-->
+
   <div class="slides ion-margin-bottom">
     <ion-slides [options]="options">
       <ion-slide *ngFor="let data of sleepinessHistory">
