--- a/sleeptracker/src/app/sleep/sleep.page.scss
+++ b/sleeptracker/src/app/sleep/sleep.page.scss
@@ -19,3 +19,20 @@ ion-content {
   }
 
   .datetime-md .datetime-placeholder { color: #999; }
+
+h2{
+  font-family: "helvetica";
+  font-size: 10px;
+  margin-top: 0px;
+  margin-bottom: 20px;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+
+h3{
+  font-size: 14px;
+  margin-top: 10px;
+  margin-bottom: 5px;
+  margin-right: 20px;
+  margin-left: 20px;
+}
