--- a/sleeptracker/src/app/sleepiness/sleepiness.page.scss
+++ b/sleeptracker/src/app/sleepiness/sleepiness.page.scss
@@ -1,23 +1,43 @@
 ion-content{
-  --ion-background-color: rgb(2,9,37);
+   --ion-background-color: rgb(9, 18, 33);
 }
 
 .option-container {
-    background: white;
-    color: black;
-    padding: 5px;
-    border-radius: 5px;
-    margin: 5px 15px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+    color: white;
+    padding: 10px;
+    border-radius: px;
+    margin: 0px 15px;
     vertical-align: middle;
+    height: 50px !important;
 }
 
 .level-text {
 	font-size:11px;
+
+}
+
+.level-number {
+  font-size: 16px;
+  text-align: center;
 }
 
 .option-range {
-	margin-top: -25px;
+	margin-top: -10px;
 	margin-right: 25px;
 	margin-left: 25px;
+}
+
+.level-number-container {
+  text-align: center;
+  height: 100%;
+}
+
+.level-number {
+  border-radius: 50px;
+  border: 1px solid white;
+  padding: 5px 10px;
+}
+
+.level-text-container {
+  vertical-align: middle;
 }
