--- a/sleeptracker/src/app/sleepiness/sleepiness.page.html
+++ b/sleeptracker/src/app/sleepiness/sleepiness.page.html
@@ -1,5 +1,5 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar style="--background: rgb(9, 18, 33)">
     <ion-title>
       Log Sleepiness
     </ion-title>
@@ -11,60 +11,63 @@
 
 <ion-content fullscreen="true">
     <ion-row class="option-container option-left" > 
-      <ion-col size="2"> 
-        <img class="level-icons" src="../assets/emoji.png">
+      <ion-col size="2" class="level-number-container"> 
+        <span class="level-number"> 1 </span>
       </ion-col>
-      <ion-col size="10"> 
+      <ion-col size="10" class="level-text-container" style="margin-top: -3px">
         <span class="level-text">Feeling active, vital, alert, or wide awake</span>
       </ion-col>
     </ion-row>
 
     <ion-row class="option-container option-left" > 
-      <ion-col size="2"> 
-        <img class="level-icons" src="../assets/emoji.png">
+      <ion-col size="2" class="level-number-container"> 
+        <span class="level-number"> 2 </span>
       </ion-col>
-      <ion-col size="10"> 
+      <ion-col size="10" class="level-text-container" style="margin-top: -12px"> 
         <span class="level-text">Functioning at high levels, but not at peak; able to concentrate</span>
       </ion-col>
     </ion-row>
+
     <ion-row class="option-container option-left" > 
-      <ion-col size="2"> 
-        <img class="level-icons" src="../assets/emoji.png">
+      <ion-col size="2" class="level-number-container"> 
+        <span class="level-number"> 3 </span>
       </ion-col>
-      <ion-col size="10"> 
+      <ion-col size="10" class="level-text-container" style="margin-top: -13px">  
         <span class="level-text">Awake, but relaxed; responsive but not fully alert</span>
       </ion-col>
     </ion-row>
+
     <ion-row class="option-container option-left" > 
-      <ion-col size="2"> 
-        <img class="level-icons" src="../assets/emoji.png">
+      <ion-col size="2" class="level-number-container"> 
+        <span class="level-number"> 4 </span>
       </ion-col>
-      <ion-col size="10"> 
+      <ion-col size="10" class="level-text-container" style="margin-top: -3px"> 
         <span class="level-text">Somewhat foggy, let down</span>
       </ion-col>
     </ion-row>
+
     <ion-row class="option-container option-left" > 
-      <ion-col size="2"> 
-        <img class="level-icons" src="../assets/emoji.png">
+      <ion-col size="2" class="level-number-container"> 
+        <span class="level-number"> 5 </span>
       </ion-col>
-      <ion-col size="10"> 
+      <ion-col size="10" class="level-text-container" style="margin-top: -13px"> 
         <span class="level-text">Foggy; losing interest in remaining awake; slowed down</span>
       </ion-col>
     </ion-row>
     <ion-row class="option-container option-left" > 
-      <ion-col size="2"> 
-        <img class="level-icons" src="../assets/emoji.png">
+      <ion-col size="2" class="level-number-container"> 
+        <span class="level-number"> 6 </span>
       </ion-col>
-      <ion-col size="10"> 
+      <ion-col size="10" class="level-text-container" style="margin-top: -12px"> 
         <span class="level-text">Sleepy, woozy, fighting sleep; prefer to lie down</span>
       </ion-col>
     </ion-row>
 
     <ion-row class="option-container option-left" > 
-      <ion-col size="2"> 
-        <img class="level-icons" src="../assets/emoji.png">
+      <ion-col size="2" class="level-number-container"> 
+        <span class="level-number"> 7 </span>
       </ion-col>
-      <ion-col size="10"> 
+      <ion-col size="10" class="level-text-container" style="margin-top: -13px"> 
         <span class="level-text">No longer fighting sleep, sleep onset soon; having dream-like thoughts</span>
       </ion-col>
     </ion-row>
@@ -72,8 +75,9 @@
     <ion-range class="option-range" [(ngModel)]="level" pin="true" min="1" max="7" step="1" snaps="true" color="secondary"></ion-range>
 
     <div style="text-align: center">
-    <ion-button (click)="recordValue()" fill="outline">Record Sleepiness</ion-button>
+      <ion-button (click)="recordValue()" fill="outline" color="secondary">Record Sleepiness</ion-button>
     </div>
+
 
 
 </ion-content>
