--- a/sleeptracker/src/app/sleepiness/sleepiness.page.html
+++ b/sleeptracker/src/app/sleepiness/sleepiness.page.html
@@ -10,6 +10,11 @@
 </ion-header>
 
 <ion-content fullscreen="true">
+
+    <div class="instruction-container" size="5"> 
+        <span style="size: 7px;"> Follow the scale and select how you feel to keep track of your sleepiness levels!</span>
+    </div>
+
     <ion-row class="option-container option-left" > 
       <ion-col size="2" class="level-number-container"> 
         <span class="level-number"> 1 </span>
