--- a/sleeptracker/src/app/sleep/sleep.page.html
+++ b/sleeptracker/src/app/sleep/sleep.page.html
@@ -10,26 +10,24 @@
 </ion-header>
 <ion-content>
 
-<ion-row class="option-container option-left" size="5"> 
-      <h3>Record Your Overnight Sleep</h3>
-        <h2> Input your sleep and wake time to log your overnight sleep. </h2>
-    </ion-row>
+    <div class="instruction-container" size="5"> 
+        <span style="size: 7px;"> Enter your sleep and wake time to keep track of your overnight sleep!</span>
+    </div>
 
-   <ion-col class="option-col">
-    <ion-row class="option-container option-left" size="5"> 
-      <h1>Sleep Time </h1>
-      <br>
-        <ion-datetime display-format="MMM DD, YY HH:mm" placeholder="select wake time" [(ngModel)]="sleepTime">
+    <div class="option-container" size="5"> 
+        <h1>Sleep Time</h1>
+        <ion-datetime display-format="MMM DD, YY HH:mm" placeholder="Enter sleep time" [(ngModel)]="sleepTime">
         </ion-datetime>
-    </ion-row>
-    <ion-row class="option-container option-right" size="5"> 
-      <h1>Wake Time </h1><br>
-        <ion-datetime display-format="MMM DD, YY HH:mm" placeholder="select sleep time" [(ngModel)]="wakeTime">
+    </div>
+
+    <div class="option-container" size="5"> 
+        <h1>Wake Time</h1>
+        <ion-datetime display-format="MMM DD, YY HH:mm" placeholder="Enter wake time" [(ngModel)]="wakeTime">
         </ion-datetime>
-    </ion-row>
-  </ion-col>
-<ng-container>
-    <ion-button (click)="logdata()" class= "button" color="light"> LOG DATA</ion-button>
-  </ng-container>
+    </div>
+
+  <div style="text-align: center">
+      <ion-button (click)="logdata()" fill="outline" color="secondary">Record Overnight Sleep</ion-button>
+    </div>
 </ion-content>
 
