--- a/sleeptracker/src/app/home/home.page.html
+++ b/sleeptracker/src/app/home/home.page.html
@@ -12,15 +12,31 @@
 
   <div class="option-section">
     <ion-row class="option-container" (click)="toSleepPage()" size="5">
-        <h5>Log Overnight Sleep</h5>
+        <span style="size: 10px; font-weight: bold;">
+          <ion-icon style="margin-bottom: -2px; margin-right: 3px;" name="bed-outline"></ion-icon>
+          Log Overnight Sleep 
+        </span>
     </ion-row>
 
     <ion-row class="option-container" (click)="toSleepinessPage()" size="5"> 
-        <h5>Log Sleepiness</h5>
+        <span style="size: 10px; font-weight: bold;">
+          <ion-icon style="margin-bottom: -2px; margin-right: 3px;" name="moon-outline"></ion-icon>
+        Log Sleepiness
+      </span>
     </ion-row>
 
     <ion-row class="option-container" (click)="toHistoryPage()"size="5"> 
-        <h5>View History</h5>
+        <span style="size: 10px; font-weight: bold;">
+        <ion-icon style="margin-bottom: -2px; margin-right: 3px;" name="archive-outline"></ion-icon>
+        Overnight Sleep History
+      </span>
+    </ion-row>
+
+    <ion-row class="option-container" (click)="toHistory2Page()"size="5"> 
+        <span style="size: 10px; font-weight: bold;">
+        <ion-icon style="margin-bottom: -2px; margin-right: 3px;" name="archive-outline"></ion-icon>
+        Sleepiness History
+      </span>
     </ion-row>
   </div>
 
