--- a/sleeptracker/src/app/history2/history2.page.html
+++ b/sleeptracker/src/app/history2/history2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar style="--background: rgb(9, 18, 33)">
     <ion-title>
-      Overnight Sleep History
+      Sleepiness History
     </ion-title>
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
@@ -10,43 +10,46 @@
 </ion-header>
 
 <ion-content>
-  <!--<ion-list-header color="light">Vertical Bar Chart</ion-list-header>
+  <!--
+  <ion-content>
+  <ion-list-header color="light">Vertical Bar Chart</ion-list-header>
   <ion-card class="welcome-card">
     <ion-card-header>
-      <ion-card-title>Sleep Duration</ion-card-title>
+      <ion-card-title>Sleepiness Level</ion-card-title>
     </ion-card-header>
     <ion-card-content>
-      <canvas #sleepChart></canvas>
+      <canvas #barChart></canvas>
     </ion-card-content>
-  </ion-card>-->
-  <h3 style="margin-left: 20px"> Recent Logs</h3>
+  </ion-card>
+</ion-content>-->
+	
+	<h3 style="margin-left: 20px"> Recent Logs</h3>
   <div class="slides ion-margin-bottom">
     <ion-slides [options]="options">
-      <ion-slide *ngFor="let data of sleepArray">
+      <ion-slide *ngFor="let data of sleepinessHistory">
         <!-- Sleep -->
-        <ion-card> 
+        <ion-card class="sleepiness-card"> 
             <ion-card-content class="ion-text-left">
             <ion-icon name="calendar-outline"></ion-icon>
-              <ion-text> {{data.dateString()}}</ion-text>
+            <ion-text> {{ data[0] }} </ion-text>
             <br>
             <ion-icon name="time-outline"></ion-icon>
-            <ion-text> {{data.startTime()}} to {{data.endTime()}}</ion-text>
+            <ion-text> {{ data[1] }} </ion-text>
             <br>
-              <ion-icon name="hourglass-outline"></ion-icon>
-            <ion-text> {{data.summaryString()}} </ion-text>
+            <ion-text> {{ data[2] }}</ion-text>
           </ion-card-content>
         </ion-card>
-        <!-- Sleepiness -->
       </ion-slide>
     </ion-slides>
   </div>
 
   <h3 style="margin-left: 20px"> More Insight</h3>
   <div class="insight" size="5"> 
-        <span> Total logs: {{ sleepArray.length }} </span>
+  		<span> Total logs: {{ sleepinessHistory.length }} </span>
+  		<br>
+        <span> Average Level: {{ averageLevel }} </span>
         <br>
-        <span> Average Time: {{ averageHours }} </span>
+        <span> Most Frequent Level: {{ mostFrequentLevel }} </span>
 
    </div>
-  
 </ion-content>
