--- a/sleeptracker/src/app/sleepiness/sleepiness.page.html
+++ b/sleeptracker/src/app/sleepiness/sleepiness.page.html
@@ -80,7 +80,7 @@
     <ion-range class="option-range" [(ngModel)]="level" pin="true" min="1" max="7" step="1" snaps="true" color="secondary"></ion-range>
 
     <div style="text-align: center">
-      <ion-button (click)="recordValue()" fill="outline" color="secondary">Record Sleepiness</ion-button>
+      <ion-button (click)="recordValue()" color="secondary">Log</ion-button>
     </div>
 
 
