--- a/sleeptracker/src/app/sleep/sleep.page.html
+++ b/sleeptracker/src/app/sleep/sleep.page.html
@@ -27,7 +27,7 @@
     </div>
 
   <div style="text-align: center">
-      <ion-button (click)="logdata()" color="secondary">Record</ion-button>
+      <ion-button (click)="logdata()" color="secondary">Log</ion-button>
     </div>
 </ion-content>
 
