--- a/sleeptracker/src/app/home/home.page.scss
+++ b/sleeptracker/src/app/home/home.page.scss
@@ -85,3 +85,17 @@ ion-content{
 .ion-col-right{
      margin-left: 5px;
 }
+
+.image-container {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.top-left {
+  position: absolute;
+  top: 10px;
+  left: 18px;
+  font-weight: bold;
+  font-size: 20px;
+}
